--- a/v1/views/new.ejs
+++ b/v1/views/new.ejs
@@ -1,13 +1,23 @@
 <%- include("partials/header") %>
 
-    <h1>Create A New Campground</h1>
+    <div class="container">
+        <div class="row">
+            <h1 style="text-align: center;" class="col-sm-12">Create A New Campground</h1>
+            <div style="width: 40%; margin: 25px auto;">
+                <form class="col-sm-12" action="/campgrounds" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="name" placeholder="name">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="image" placeholder="image url">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    </div>
+                </form>
+                <a href="/campgrounds">Go Back</a>
+            </div>
+        </div>
 
-    <a href="/campgrounds">Go Back</a>
-
-    <form action="/campgrounds" method="POST">
-        <input type="text" name="name" placeholder="name">
-        <input type="text" name="image" placeholder="image url">
-        <button>Submit!</button>
-    </form>
-
+    </div>
     <%- include("partials/footer") %>
