--- a/v3/views/show.ejs
+++ b/v3/views/show.ejs
@@ -10,4 +10,13 @@
         <%= campground.description %>
     </p>
 
-    <%- include("partials/footer") %>
+    <% campground.comments.forEach(function(comment) { %>
+        <p>
+            <strong>
+                <%= comment.author %>
+            </strong>
+            -
+            <%= comment.text %>
+        </p>
+        <% }) %>
+            <%- include("partials/footer") %>
