--- a/v6/views/partials/header.ejs
+++ b/v6/views/partials/header.ejs
@@ -13,14 +13,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Login
+                    <a class="nav-link" href="/login">Login
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Sign Up</a>
+                    <a class="nav-link" href="/register">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
