--- a/v6/views/register.ejs
+++ b/v6/views/register.ejs
@@ -1,7 +1,11 @@
-<h1>Sign up!</h1>
+<%- include("./partials/header") %>
 
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="text" name="password" placeholder="password">
-    <button>Sign Up</button>
-</form>
+    <h1>Sign up!</h1>
+
+    <form action="/register" method="POST">
+        <input type="text" name="username" placeholder="username">
+        <input type="text" name="password" placeholder="password">
+        <button>Sign Up</button>
+    </form>
+
+    <%- include("./partials/footer") %>
