--- a/v6/views/partials/header.ejs
+++ b/v6/views/partials/header.ejs
@@ -12,16 +12,24 @@
         <a class="navbar-brand" href="#">YelpCamp</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/login">Login
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
+                <% if(!currentUser) { %>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/login">Login
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Sign Up</a>
+                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Signed In As
+                                <%= currentUser.username %>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                        <% } %>
             </ul>
         </div>
     </nav>
