add user associations to campgrounds

--- a/v9/views/campgrounds/show.ejs
+++ b/v9/views/campgrounds/show.ejs
@@ -28,7 +28,12 @@
                         <p>
                             <%= campground.description %>
                         </p>
-
+                        <p>
+                            Submitted By
+                            <em>
+                                <%= campground.author.username %>
+                            </em>
+                        </p>
                     </div>
                 </div>
                 <div class="card bg-lights">
