--- a/v10/views/campgrounds/show.ejs
+++ b/v10/views/campgrounds/show.ejs
@@ -34,6 +34,7 @@
                                 <%= campground.author.username %>
                             </em>
                         </p>
+                        <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                     </div>
                 </div>
                 <div class="card bg-lights">
